* 2013-12-17 - tobias.friedrich@open-xchange.com

 - Fix for bug 30355: Point to the correct configuration file when adjusting permissions during post-install
 - Fix for bug 30336: Re-added LGI-0013
 - Fix for bug 30319: Changed error message when not having access to a folder

* 2013-12-16 - thorben.betten@open-xchange.com

 - Fix for bug 30339: Properly query a contact's current location from Facebook FQL API

* 2013-12-16 - marcus.klein@open-xchange.com

 - Fix for bug 30318: Post installation scripts do not create any new files anymore and modify instead the existing ones. This keeps
   permissions as the are.

* 2013-12-14 - thorben.betten@open-xchange.com

 - Fix for bug 30302: Added missing "org.slf4j" package import to bundle "c.o.freebusy.json"

* 2013-12-13 - thorben.betten@open-xchange.com

 - Fix for bug 30294: Properly detect availability of spam handler(s)
 - Fix for bug 30305: Added null guard for values passed to MDC map
 - Fix for bug 30306: Always include logging WebDAV handler in handler cycle to support dynamically changing log level

* 2013-12-13 - marc.arens@open-xchange.com

 - Fix for bug 30128: Implement service to allow cascading cleanup per ID

* 2013-12-13 - jan.bauerdick@open-xchange.com

 - Fix for bug 30293: Added primary key to CreateTableService & added UpdateTask for existing tables

* 2013-12-12 - tobias.friedrich@open-xchange.com

 - Fix for bug 30278: Corrected handling of timestamp in "updates" request of contacts module

* 2013-12-12 - marcus.klein@open-xchange.com

 - Fix for bug 30275: Removed dependency to package open-xchange-themes-default from package open-xchange for AppSuite only installations.

* 2013-12-09 - marcus.klein@open-xchange.com

 - Fix for bug 30145: Have to clear variable in post installation script before using it.

* 2013-12-09 - tobias.friedrich@open-xchange.com

 - Fix for bug 29729: Skip filestorage deletion if bucket no longer exists